replace package history with enriched timeline
